[package]
name = "warehouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio", "tls-native-tls" ] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["v4"] }
aws-config = { version= "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.53.0"