[package]
name = "warehouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["v4"] }
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
rusoto_dynamodb = "0.48.0"
jsonwebtoken = "7.0.1"
argon2 = "*"
rand = "0.8.4"
thiserror = "*"