[package]
name = "oms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"

async-std = { version = "*", features = [ "attributes" ] }
sqlx-cli = { version = "*" }
sqlx = { version = "*", features = [ "postgres", "macros", "chrono", "json", "uuid", "runtime-actix-native-tls" ]}
async-graphql = { version = "*", features = [ "chrono", "log", "tracing", "uuid", "dataloader" ] }
async-graphql-actix-web = { version = "*"}

serde = { version = "*", features = [ "derive" ] }

uuid = "*"
chrono = "*"

