[package]
name = "ims"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
async-graphql = { version = "5.0.10", features = [ "uuid", "dataloader" ]}
async-graphql-actix-web = "5.0.10"
async-std = "1.12.0"
sqlx = { version = "0.6.3", features = [ "runtime-actix-native-tls", "postgres", "macros", "uuid", "chrono", "json" ] }

models = { path = "../../models", version = "0.1.0" }
